<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Papos</string>
    <string name="action_settings">Settings</string>

    <string name="set">Set</string>
    <string name="ok">OK</string>
    <string name="group">Group</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="group_select_title">Group by categories</string>
    <string name="search_select_title">Search by categories</string>
    <string name="set_attribute_title">Set Attributes</string>
    <string name="add_person_title">Add Person</string>
    <string name="first_group">First Group</string>
    <string name="second_group">Second Group</string>
    <string name="third_group">Third Group</string>
    
    
    <string-array name="group_list">
        <item></item>
        <item>Person</item>
        <!--  <item>Group</item>  -->
        <item>Place</item>
        <item>Event</item>
        <item>Address</item>
        <item>Season</item>
        <item>Time slot</item>
        <item>Recent</item>
        <item>Distance</item>
    </string-array>

    <string name="date">Date</string>
    <string name="date_picker_title">Select date you want to find</string>
    <string name="time_slot">Time slot</string>

    <string-array name="timeslot_array">
        <item></item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
        <item>Dawn</item>
    </string-array>

    <string name="season">Season</string>

    <string-array name="season_array">
        <item></item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn</item>
        <item>Winter</item>
    </string-array>

    <string name="recent">Recent</string>

    <string-array name="recent_array">
        <item></item>
        <item>In 1 week</item>
        <item>In 1 month</item>
        <item>In 3 month</item>
        <item>In 6 month</item>
        <item>In 1 year</item>
    </string-array>

    <string name="form">Form</string>

    <string-array name="form_array">
        <item></item>
        <item>Wide</item>
        <item>Height</item>
    </string-array>

    <string name="person">Person</string>
    <!-- people_array는 db에서 관리 -->

    <!--  <string name="group">Group</string>  -->
    <!-- group_array는 db에서 관리 -->

    <!-- <string name="distance">Distance</string> -->

	<!-- 
    <string-array name="distance_array">
        <item></item>
        <item>Near</item>
        <item>Far</item>
    </string-array>

 	-->
    
    <string name="address">Address</string>
    <!-- address_array는 db에서 관리 -->

    <string name="place">Place</string>
    <!-- place_array는 db에서 관리 -->

    <string name="event">Event</string>
    <!-- event_array는 db에서 관리 -->

    <string name="any">Any</string>

</resources>